--- a/admin/config.yml
+++ b/admin/config.yml
@@ -21,6 +21,7 @@ collections: # A list of collections the CMS should be able to edit
       - {label: "Layout", name: "layout", widget: "hidden", default: "post"}
       - {label: "Title", name: "title", widget: "string", tagname: "h1"}
       - {label: "Meta Description", name: "meta_description", widget: "string", required: false}
+      - {label: "Main Image", name: "main_image", widget: "image", tagname: "img"}
       - label: "Author"
         name: "author"
         widget: "select"
