--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,11 +1,6 @@
 # specify site authors in this file
 # you can add .yml files for any other global data in this folder
 
-dan_urbanowicz:
-    name: Dan Urbanowicz
-    email: dan.urbanowicz@gmail.com
-    web: https://www.danurbanowicz.com
-john_doe:
-    name: John Doe
-    email: johndoe@email.com
-    web: http://twitter.com/johndoe
+haley_rowe_kadow:
+    name: Haley Rowe-Kadow
+    email: haley504@gmail.com
