--- a/admin/config.yml
+++ b/admin/config.yml
@@ -44,5 +44,5 @@ collections: # A list of collections the CMS should be able to edit
       - {label: "Meta Description", name: "meta_description", widget: "string", required: false}
       - {label: "Permalink", name: "permalink", widget: "hidden"}
       - {label: "Section", name: "section", widget: "hidden", default: "{{name}}"}
-      - {label: "Intro Paragraph", name: "intro_paragraph", widget: "markdown", required: false}
-      - {label: "Body", name: "body", widget: "markdown", required: false}
+      - {label: "Intro Paragraph", name: "intro_paragraph", widget: "richtext", required: false}
+      - {label: "Body", name: "body", widget: "richtext", required: false}
