--- a/admin/config.yml
+++ b/admin/config.yml
@@ -56,4 +56,4 @@ collections: # A list of collections the CMS should be able to edit
     fields:
       - {label: "Title", name: "title", widget: "string", tagname: "h1"}
       - {label: "Image", name: "image", widget: "image"}
-      - {label: "link", name: "link", widget: "url"}
+      - {label: "link", name: "link", widget: "string", }
