--- a/admin/config.yml
+++ b/admin/config.yml
@@ -57,3 +57,4 @@ collections: # A list of collections the CMS should be able to edit
       - {label: "Title", name: "title", widget: "string", tagname: "h1"}
       - {label: "Image", name: "image", widget: "image"}
       - {label: "link", name: "link", widget: "string", }
+      - {label: "Categories", name: "categories", widget: "string", required: false}
