--- a/admin/config.yml
+++ b/admin/config.yml
@@ -58,3 +58,4 @@ collections: # A list of collections the CMS should be able to edit
       - {label: "Image", name: "image", widget: "image"}
       - {label: "link", name: "link", widget: "string", }
       - {label: "Categories", name: "categories", widget: "string", required: false}
+      - {label: "Details", name: "details", widget: "markdown", required: false}
