--- a/admin/config.yml
+++ b/admin/config.yml
@@ -54,6 +54,7 @@ collections: # A list of collections the CMS should be able to edit
     create: true
     slug: "{{slug}}"
     fields:
+      - {label: "Layout", name: "layout", widget: "hidden", default: "porfolio_item"}
       - {label: "Title", name: "title", widget: "string", tagname: "h1"}
       - {label: "Image", name: "image", widget: "image"}
       - {label: "Link", name: "link", widget: "string", }
