--- a/_config.yml
+++ b/_config.yml
@@ -27,6 +27,11 @@ permalink: /blog/:title
 # (used as a hook for styling etc)
 section: true
 
+
+collections:
+  porfolio_items:
+    output: true
+
 # set to 'true' to enable Netlify CMS (/admin) in production builds
 netlifycms: true
 
